<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Activity.LoginActivity">
    <ImageView
        android:layout_width="90dp"
        android:src="@drawable/ic_black_01"
        android:layout_height="90dp"></ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/email"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:textSize="@dimen/text_size_normal"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:layout_width="match_parent"
            android:background="@drawable/rectangle_white_grey_dark_border"
            android:padding="10dp"
            android:id="@+id/emailET"
            android:layout_marginBottom="20dp"
            android:layout_height="45dp"></EditText>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"
            android:layout_height="wrap_content"></TextView>


<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    app:passwordToggleEnabled="true"
    android:layout_height="60dp">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:background="@drawable/rectangle_white_grey_dark_border"
        android:id="@+id/passwordET"
        android:padding="10dp"
        android:inputType="textPassword"
         android:layout_height="45dp">

    </com.google.android.material.textfield.TextInputEditText>

</com.google.android.material.textfield.TextInputLayout>







        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/white"
            android:id="@+id/loginTxt"
            android:background="@drawable/black_button"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:gravity="right"
            android:layout_marginTop="5dp"
            android:text="@string/forget_password"
            android:id="@+id/forgetpasswordTxt"
            android:layout_height="wrap_content"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:layout_height="0.8dp"></View>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/login_with"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"

                android:textColor="@color/black"
                android:layout_height="wrap_content"></TextView>
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:layout_height="0.8dp"></View>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/ic_google_siginin"
                android:layout_marginTop="10dp"
                android:id="@+id/googlesignImgV"
                android:layout_height="wrap_content"></ImageView>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:id="@+id/donthaveaccountTxt"
            android:layout_marginTop="20dp"
            android:text="@string/don_t_have_an_account"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:id="@+id/signUpTxt"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>

</LinearLayout>