<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".Activity.LoginActivity">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="90dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/mainlogo"></ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:textSize="@dimen/text_size_normal"
                android:layout_height="wrap_content"></TextView>
            <EditText
                android:layout_width="match_parent"
                android:background="@drawable/rectangle_white_grey_dark_border"
                android:padding="10dp"
                android:id="@+id/fullNameET"
                android:layout_marginBottom="25dp"
                android:layout_height="45dp"></EditText>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/email"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:textSize="@dimen/text_size_normal"
                android:layout_height="wrap_content"></TextView>
            <EditText
                android:layout_width="match_parent"
                android:background="@drawable/rectangle_white_grey_dark_border"
                android:padding="10dp"
                android:id="@+id/emailET"
                android:layout_marginBottom="25dp"
                android:layout_height="45dp"></EditText>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"
                android:layout_height="wrap_content"></TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="25dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:background="@drawable/rectangle_white_grey_dark_border"
                    android:id="@+id/passwordET"
                    android:paddingLeft="10dp"
                    android:drawableRight="@drawable/ic_hide_icon"
                    android:inputType="textPassword"
                    android:layout_height="45dp">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:layout_width="match_parent"
                android:text="@string/confirm_password"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"
                android:layout_height="wrap_content"></TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="25dp"
                app:passwordToggleEnabled="true">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:background="@drawable/rectangle_white_grey_dark_border"
                    android:paddingLeft="10dp"
                    android:id="@+id/confirmPasswordET"
                    android:drawableRight="@drawable/ic_hide_icon"
                    android:inputType="textPassword"
                    android:layout_height="45dp"></com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:text="@string/mobile"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:textSize="@dimen/text_size_normal"
                android:layout_height="wrap_content"></TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="100dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/rectangle_white_grey_dark_border"
                    android:padding="10dp"
                    android:text="+965"
                    android:id="@+id/countryCodeET"
                    android:drawableRight="@drawable/ic_arrow_down"
                    android:layout_height="45dp"></EditText>

                <EditText
                    android:layout_width="match_parent"
                    android:background="@drawable/rectangle_white_grey_dark_border"
                    android:padding="10dp"
                    android:id="@+id/mobilenumberET"

                    android:layout_height="45dp"></EditText>

            </LinearLayout>

            <CheckBox
                android:layout_width="match_parent"
                android:text="@string/accept_terms_and_conditions"
                android:button="@drawable/checkbox_selector"
                android:layout_marginRight="10dp"
                android:id="@+id/checkboxCB"
                android:textSize="@dimen/text_size_normal"
                android:layout_height="wrap_content"></CheckBox>
            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:text="@string/sign_up"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="10dp"
                android:id="@+id/signUpTxt"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/white"
                android:background="@drawable/black_button"
                android:layout_height="wrap_content"></TextView>



            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:id="@+id/alreadyaccountTxt"
                android:layout_marginTop="20dp"
                android:text="@string/have_an_account_already"
                android:layout_height="wrap_content"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:text="@string/login"
                android:id="@+id/loginTxt"

                android:layout_height="wrap_content"></TextView>
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>