<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ContactUsActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:id="@+id/toolbar"
        android:background="@color/black"
        android:elevation="4dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/backBtn"
                android:src="@drawable/ic_back"></ImageView>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/contact_us"
                android:textSize="17dp"
                android:textColor="@color/white">

            </TextView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_checkout_bag_white"
                    android:layout_marginLeft="20dp"
                    android:layout_height="wrap_content"></ImageView>
            </LinearLayout>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/email"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:textSize="@dimen/text_size_normal"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:layout_width="match_parent"
            android:background="@drawable/rectangle_white_grey_dark_border"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"></EditText>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:textSize="@dimen/text_size_normal"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:layout_width="match_parent"
            android:background="@drawable/rectangle_white_grey_dark_border"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"></EditText>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/message"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:textSize="@dimen/text_size_normal"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:layout_width="match_parent"
            android:background="@drawable/rectangle_white_grey_dark_border"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:layout_height="250dp"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:text="@string/send"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="10dp"
            android:id="@+id/sendTxt"

            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/white"
            android:background="@drawable/black_button"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>
</LinearLayout>