<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true">
        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/black"
            app:fabAlignmentMode="center"
            android:gravity="center"
            app:fabCradleRoundedCornerRadius="30dp"
            style="@style/Widget.MaterialComponents.BottomAppBar"
            android:theme="@style/AppThemeMaterial" >
            <LinearLayout
                android:layout_width="match_parent"

                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:background="@color/black"

                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/homeLL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/homeImage"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_margin="5dp"

                        android:src="@drawable/ic_bold_home" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/home"
                        android:textSize="@dimen/text_size_normal"
                        android:visibility="visible"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:id="@+id/searchLL"



                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_margin="5dp"
                        android:id="@+id/searchImage"
                        android:src="@drawable/ic_unbold_search"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/search"
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/white"
                        android:visibility="visible"
                        android:layout_height="wrap_content">

                    </TextView>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:id="@+id/likeLL"



                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_margin="5dp"
                        android:id="@+id/likeImage"

                        android:src="@drawable/ic_unbold_star"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/wishlist"
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/white"
                        android:visibility="visible"
                        android:layout_height="wrap_content">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"


                    android:layout_height="wrap_content"
                    android:id="@+id/profileLL"
                    android:orientation="vertical"
                    android:gravity="center"

                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_margin="5dp"
                        android:id="@+id/profileImage"

                        android:src="@drawable/ic_unbold_profile"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/profile"
                        android:textSize="@dimen/text_size_normal"
                        android:textColor="@color/white"
                        android:visibility="visible"
                        android:layout_height="wrap_content">

                    </TextView>
                </LinearLayout>


            </LinearLayout>
        </com.google.android.material.bottomappbar.BottomAppBar>
        <!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
        <!--            android:id="@+id/fab"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:src="@drawable/ic_menu_barcode"-->
        <!--            android:elevation="0dp"-->
        <!--            app:fabSize="normal"-->
        <!--            app:maxImageSize="59dp"-->
        <!--            android:layout_margin="5dp"-->
        <!--            app:layout_anchor="@id/bottom_app_bar"-->
        <!--            app:backgroundTint="@color/colorAppBG"-->
        <!--            />-->
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:background="@color/white"
            android:layout_marginBottom="60dp"
            />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>